[gd_scene load_steps=3 format=2]

[ext_resource path="res://Singletones/GameChat.gd" type="Script" id=1]
[ext_resource path="res://addons/discord_gd/discord.gd" type="Script" id=2]

[node name="GameChatTesting" type="Node2D"]
script = ExtResource( 1 )

[node name="DiscordBot" type="HTTPRequest" parent="."]
script = ExtResource( 2 )

[node name="Button" type="Button" parent="."]
margin_left = 654.0
margin_top = 454.0
margin_right = 782.0
margin_bottom = 525.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LineEdit" type="LineEdit" parent="."]
margin_left = 186.0
margin_top = 454.0
margin_right = 629.0
margin_bottom = 525.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextEdit" type="TextEdit" parent="."]
margin_left = 186.0
margin_top = 71.0
margin_right = 782.0
margin_bottom = 435.0
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="bot_ready" from="DiscordBot" to="." method="_on_DiscordBot_bot_ready"]
[connection signal="message_create" from="DiscordBot" to="." method="_on_DiscordBot_message_create"]
[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
